Add or operator to query api
Signed-off-by: ivo <chniucg@gmail.com>